--- a/foundry.toml
+++ b/foundry.toml
@@ -5,6 +5,8 @@ libs = ["lib"]
 
 remappings = [
     "@solmate/=lib/solmate/src/",
+    "@openzeppelin/=lib/openzeppelin-contracts/contracts/",
+    "openzeppelin/=lib/openzeppelin-contracts/contracts/",
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
