--- a/foundry.toml
+++ b/foundry.toml
@@ -4,9 +4,14 @@ out = "out"
 libs = ["lib"]
 
 remappings = [
-    "@solmate/=lib/solmate/src/",
     "@openzeppelin/=lib/openzeppelin-contracts/contracts/",
+    "@solmate/=lib/solmate/src/",
+    "ds-test/=lib/forge-std/lib/ds-test/src/",
+    "erc4626-tests/=lib/openzeppelin-contracts/lib/erc4626-tests/",
+    "forge-std/=lib/forge-std/src/",
+    "openzeppelin-contracts/=lib/openzeppelin-contracts/",
     "openzeppelin/=lib/openzeppelin-contracts/contracts/",
+    "solmate/=lib/solmate/src/",
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
